--- a/package.json
+++ b/package.json
@@ -10,10 +10,28 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@tiptap/extension-bold": "^3.2.1",
+    "@tiptap/extension-document": "^3.2.1",
+    "@tiptap/extension-heading": "^3.2.1",
+    "@tiptap/extension-highlight": "^3.2.1",
+    "@tiptap/extension-horizontal-rule": "^3.2.1",
+    "@tiptap/extension-image": "^3.2.1",
+    "@tiptap/extension-italic": "^3.2.1",
+    "@tiptap/extension-link": "^3.2.1",
+    "@tiptap/extension-list": "^3.2.1",
+    "@tiptap/extension-paragraph": "^3.2.1",
+    "@tiptap/extension-strike": "^3.2.1",
+    "@tiptap/extension-text": "^3.2.1",
+    "@tiptap/extension-underline": "^3.2.1",
+    "@tiptap/extensions": "^3.2.1",
+    "@tiptap/react": "^3.2.1",
+    "@tiptap/starter-kit": "^3.2.1",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
